# rust-value-betting-engine

./: .gitignore  Cargo.toml  README.md
benches/: benchmarks.rs
chrome-extension/: README.md  background.js  manifest.json
chrome-extension/lib/: messages.js
chrome-extension/native-host/: com.odds_scrapper.bridge.json
chrome-extension/popup/: popup.css  popup.html  popup.js
docs/: roadmap.md
src/: lib.rs  main.rs
src/application/services/: bookmaker_scrapper_service.rs  mod.rs
src/application/services/bookmaker_scrapper_service/: tests.rs
src/benchmark/: data.rs
src/domain/: mod.rs
src/domain/entities/: arbitrage.rs  fixture_cluster.rs  game.rs  market.rs  mod.rs  odd.rs  platform.rs
src/domain/entities/arbitrage/: tests.rs
src/domain/entities/fixture_cluster/: tests.rs
src/domain/entities/game/: tests.rs
src/domain/entities/market/: tests.rs
src/domain/entities/markets/: asian_handicap.rs  double_chance.rs  handicap.rs  match_result.rs  mod.rs  moneyline.rs  total.rs
src/domain/entities/platform/: tests.rs
src/domain/services/: cluster_service.rs  fixture_cluster.rs  mod.rs
src/domain/services/cluster_service/: tests.rs
src/domain/services/fixture_cluster/: tests.rs
src/domain/value_objects/: mod.rs
src/infrastructure/: mod.rs
src/infrastructure/bridge/: mod.rs  types.rs
src/infrastructure/config/: mod.rs
src/infrastructure/connectors/: betano_connector.rs  bridge_connector.rs  bwin_connector.rs  lebull_connector.rs  mod.rs  parser_registry.rs
src/infrastructure/connectors/bridge_connector/: tests.rs
src/infrastructure/parsers/: betano_parser.rs  bwin_parser.rs  lebull_parser.rs  mod.rs  parser_registry.rs
src/infrastructure/parsers/betano_parser/: tests.rs
src/infrastructure/parsers/bwin_parser/: tests.rs
src/infrastructure/parsers/lebull_parser/: tests.rs
src/infrastructure/parsers/parser_registry/: tests.rs
src/infrastructure/server/: mod.rs
src/shared/: error.rs
tests/: smoke_test.rs
web-app/: package-lock.json  package.json  pnpm-lock.yaml
web-app/src/: App.tsx  index.css
web-app/src/hooks/: useAnimatedValue.ts  useClusters.ts  useGames.ts
web-app/src/lib/: api.ts  markets.ts  odds.ts
web-app/src/routes/: __root.tsx  games.$platform.tsx  games.tsx  index.tsx  routeTree.ts
web-app/src/stores/: clusters-ui.ts
web-app/src/types/: cluster.ts
(+18 files in other folders)
