[package]
name = "rust-value-betting-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
deunicode = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
strsim = "0.11.1"
ureq = { version = "3", features = ["json"] }
uuid = { version = "1.23.2", features = ["v4"] }

[dev-dependencies]
criterion = "0.8.2"

[[bin]]
name = "rust-value-betting-engine"
path = "src/main.rs"

[[bin]]
name = "bridge"
path = "src/bin/bridge.rs"
