[package]
name = "rust-value-betting-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
async-stream = "0.3"
futures = "0.3"
axum-macros = "0.5.1"
chrono = "0.4.45"
deunicode = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
strsim = "0.11.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
url = "2"
uuid = { version = "1.23.2", features = ["v4"] }
strum = { version = "0.28.0", features = ["derive"] }
strum_macros = "0.28.0"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["async", "async_tokio"] }

[[bench]]
name = "benchmarks"
harness = false

[[bin]]
name = "rust-value-betting-engine"
path = "src/main.rs"

[[bin]]
name = "bridge"
path = "src/bin/bridge.rs"
